# rust-wiregui

./: Cargo.toml  PKGBUILD  README.md  wiregui.desktop
src/: app.rs  connections.rs  info.rs  main.rs  net.rs  notify.rs  state.rs
