[package]
name = "wiregui"
description = "Wireguard network manager"
authors = ["CptLemming"]
license = "MIT"
readme = "README.md"
version = "0.1.4"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
# networkmanager = "0.5"
networkmanager = { git = "https://github.com/CptLemming/networkmanager-rs", rev = "dcda498" }
dbus = "0.9"

[package.metadata.arch]
makedepends = []
